src/styles/global.less
.icon {
  width: 24px;
  height: 24px;
  color: #fff;
  fill: #fff;
  display: grid;
  place-items: center;
}

.mobile-content {
  position: absolute;
  top: -300px;
  height: 340px;
  list-style: none;
  transition: all 300ms;
  z-index: 1;
}

.mobile-content.open {
  top: 60px;
}

.mobile-content li {
  padding: 16px;
}

.mobile-content li a {
  color: white;
  text-decoration: none;
}

.navbar {
  position: relative;
  transition: all 300ms;
  z-index: 10;
}

.navbar.open {
  margin-bottom: 356px;
}

.page {
  width: min(510px, 100%) !important;
}

.comment {
  background: #ededed;
  border-radius: 4px;
  header {
    justify-content: start;
    align-items: center;
    margin-bottom: 8px;
    img {
      width: 25px;
      height: 25px;
      border-radius: 50%;
      object-fit: cover;
    }
  }
}

body.dark {
  .comment {
    background: #42445A;
  }
}

